dim/spec/test_input/invalid_input/modules/attribute_no_string.dim
document: test_module

test_id_1:
  text:
    - test